--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,12 +18,13 @@
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.4",
     "@reduxjs/toolkit": "^2.5.0",
+    "@stripe/stripe-js": "^5.6.0",
     "@types/js-cookie": "^3.0.6",
     "antd": "^5.23.0",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
+    "date-fns": "^3.6.0",
     "flowbite-react": "^0.10.2",
     "framer-motion": "^12.0.8",
     "gsap": "^3.12.5",
