--- a/backend/package.json
+++ b/backend/package.json
@@ -44,7 +44,7 @@
     "geoip-lite": "^1.4.10",
     "get-media-dimensions": "^2.0.2",
     "jsonwebtoken": "^9.0.2",
-    "mern.common": "^1.0.12",
+    "mern.common": "^1.0.16",
     "mongoose": "^8.9.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
@@ -52,6 +52,7 @@
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.9",
     "razorpay": "^2.9.5",
+    "redis": "^4.7.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "stripe": "^17.6.0",
