--- a/backend/package.json
+++ b/backend/package.json
@@ -55,6 +55,7 @@
     "redis": "^4.7.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.8.1",
     "stripe": "^17.6.0",
     "ts-node": "^10.9.2",
     "tsyringe": "^4.8.0"
