--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
+    "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
@@ -44,6 +45,7 @@
     "react-router-dom": "^7.1.1",
     "react-spinners": "^0.15.0",
     "recharts": "^2.15.1",
+    "socket.io-client": "^4.8.1",
     "spinners-react": "^1.0.10",
     "tailwind-merge": "^2.6.0",
     "tailwind-scrollbar-hide": "^2.0.0",
