--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,8 @@
     "@radix-ui/react-toast": "^1.2.4",
     "@reduxjs/toolkit": "^2.5.0",
     "@stripe/stripe-js": "^5.6.0",
+    "@tanstack/react-query": "^5.66.5",
+    "@tanstack/react-query-devtools": "^5.66.5",
     "@types/js-cookie": "^3.0.6",
     "antd": "^5.23.0",
     "axios": "^1.7.9",
