--- a/backend/package.json
+++ b/backend/package.json
@@ -59,6 +59,7 @@
     "socket.io": "^4.8.1",
     "stripe": "^17.6.0",
     "ts-node": "^10.9.2",
-    "tsyringe": "^4.8.0"
+    "tsyringe": "^4.8.0",
+    "uuid": "^11.1.0"
   }
 }
