--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -10,6 +10,6 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true
   },
-  "include": ["src/**/*"],           
+  "include": ["src/**/*", "src/tests"],           
   "exclude": ["node_modules", "dist"]  
 }
