--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@emoji-mart/react": "^1.1.1",
     "@gsap/react": "^2.1.1",
     "@hcaptcha/react-hcaptcha": "^1.12.0",
+    "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
@@ -36,6 +37,8 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
     "date-fns": "^3.6.0",
+    "embla-carousel-autoplay": "^8.5.2",
+    "embla-carousel-react": "^8.5.2",
     "emoji-mart": "^5.6.0",
     "flowbite-react": "^0.10.2",
     "framer-motion": "^12.0.8",
