--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "@types/node": "^22.10.10",
     "@types/node-cron": "^3.0.11",
     "@types/supertest": "^6.0.2",
+    "@types/winston": "^2.4.4",
     "jest": "^29.7.0",
     "mongodb-memory-server": "^10.1.4",
     "supertest": "^7.0.0",
@@ -27,7 +28,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.734.0",
     "@aws-sdk/s3-request-presigner": "^3.750.0",
-    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/compression": "^1.7.5",
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
@@ -37,7 +38,7 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/morgan": "^1.9.9",
     "@types/nodemailer": "^6.4.17",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
     "chalk": "^5.4.1",
     "compression": "^1.7.5",
@@ -52,7 +53,7 @@
     "geoip-lite": "^1.4.10",
     "get-media-dimensions": "^2.0.2",
     "jsonwebtoken": "^9.0.2",
-    "mern.common": "^1.0.16",
+    "mern.common": "^1.2.0",
     "mongoose": "^8.9.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
@@ -66,6 +67,8 @@
     "stripe": "^17.6.0",
     "ts-node": "^10.9.2",
     "tsyringe": "^4.8.0",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "winston": "^3.17.0",
+    "winston-gelf-pro": "^1.0.1"
   }
 }
