--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -8,7 +8,11 @@
     "strict": true,
     "skipLibCheck": true,
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "emitDecoratorMetadata": true,
+    "typeRoots": [
+      "./node_modules/@types",
+      "./types"
+    ]
   },
   "include": ["src/**/*", "src/tests"],           
   "exclude": ["node_modules", "dist"]  
