--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^22.10.10",
     "@types/node-cron": "^3.0.11",
+    "@types/simple-oauth2": "^5.0.7",
     "@types/supertest": "^6.0.2",
     "@types/winston": "^2.4.4",
     "jest": "^29.7.0",
@@ -39,6 +40,7 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/morgan": "^1.9.9",
     "@types/nodemailer": "^6.4.17",
+    "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
     "chalk": "^5.4.1",
@@ -64,6 +66,7 @@
     "razorpay": "^2.9.5",
     "redis": "^4.7.0",
     "reflect-metadata": "^0.2.2",
+    "simple-oauth2": "^5.1.0",
     "socket.io": "^4.8.1",
     "stripe": "^17.6.0",
     "ts-node": "^10.9.2",
