--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -5,6 +5,11 @@ services:
     build:
       context: ./backend
       dockerfile: Dockerfile.dev
+    sysctls:
+      - net.ipv6.conf.all.disable_ipv6=1
+    dns:
+      - 8.8.8.8
+      - 8.8.4.4
     restart: unless-stopped
     env_file: ./backend/.env
     volumes:
