--- a/backend/package.json
+++ b/backend/package.json
@@ -57,7 +57,7 @@
     "get-media-dimensions": "^2.0.2",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mern.common": "^1.2.0",
+    "mern.common": "^1.2.1",
     "mongoose": "^8.9.3",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
@@ -73,6 +73,7 @@
     "tsyringe": "^4.8.0",
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
-    "winston-gelf-pro": "^1.0.1"
+    "winston-gelf-pro": "^1.0.1",
+    "zod": "^4.0.5"
   }
 }
