--- a/frontend/tsconfig.node.json
+++ b/frontend/tsconfig.node.json
@@ -12,9 +12,9 @@
     "noEmit": true,
     "strict": false,
     "noUnusedLocals": false,
-    "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUnusedParameters": false,
+    "noFallthroughCasesInSwitch": false,
+    "noUncheckedSideEffectImports": false
   },
   "include": ["vite.config.ts"]
 }
