fix:tsconfig.json for test dev

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -8,7 +8,10 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "strict": false, 
+    "noUnusedLocals": false, 
+    "noImplicitAny": false
   }
 
 }
