--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -23,10 +23,12 @@
     "jsx": "react-jsx",
 
     /* Linting */
-    "strict": false,
+    "strict": false, 
+    "noImplicitAny": false,
+    "strictNullChecks": false,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
-    "noFallthroughCasesInSwitch": false,
+    "noFallthroughCasesInSwitch": false, 
     "noUncheckedSideEffectImports": false
   },
   "include": ["src"]
