--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -7,28 +7,21 @@
     "module": "ESNext",
     "skipLibCheck": true,
     "baseUrl": ".",
-    
     "paths": {
-      "@/*": [
-        "./src/*"
-      ]
+      "@/*": ["./src/*"]
     },
-
-    /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "isolatedModules": true,
     "moduleDetection": "force",
     "noEmit": true,
     "jsx": "react-jsx",
-
-    /* Linting */
-    "strict": false, 
+    "strict": false,
     "noImplicitAny": false,
     "strictNullChecks": false,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
-    "noFallthroughCasesInSwitch": false, 
+    "noFallthroughCasesInSwitch": false,
     "noUncheckedSideEffectImports": false
   },
   "include": ["src"]
