--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -11,3 +11,40 @@ CMD ["npm", "run", "start"]
 
 
 
+
+
+# # Stage 1: Build
+# FROM node:22-alpine AS builder
+
+# WORKDIR /app
+
+# # Install dependencies
+# COPY package*.json ./
+# RUN npm ci
+
+# # Copy source files
+# COPY . .
+
+# # Build step (optional, if you have a build script)
+# # RUN npm run build
+
+# # Stage 2: Runtime
+# FROM node:22-alpine
+
+# WORKDIR /app
+
+# # Create non-root user
+# RUN adduser -D nodeuser
+
+# # Copy only necessary files from builder
+# COPY --from=builder /app /app
+
+# # Set ownership
+# RUN chown -R nodeuser:nodeuser /app
+
+# USER nodeuser
+
+# ENV NODE_ENV=development
+# EXPOSE 5050
+
+# CMD ["npm", "run", "start"]
