add : nginx config details

--- a/nginx/conf.d/nginx.conf
+++ b/nginx/conf.d/nginx.conf
@@ -1,28 +1,66 @@
-location /api {
-    proxy_pass http://backend:5050;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
+# location /api {
+#     proxy_pass http://backend:5050;
+#     proxy_set_header Host $host;
+#     proxy_set_header X-Real-IP $remote_addr;
+#     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#     proxy_set_header X-Forwarded-Proto $scheme;
+# }
+
+# root /usr/share/nginx/html;
+# index index.html;
+
+# gzip on;
+# gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+# gzip_min_length 256;
+
+# location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|eot|ttf|svg)$ {
+#     expires 30d;
+#     access_log off;
+#     add_header Cache-Control "public";
+# }
+
+# location / {
+#     try_files $uri $uri/ /index.html;
+# }
+
+# add_header X-Content-Type-Options nosniff;
+# add_header X-Frame-Options DENY;
+# add_header X-XSS-Protection "1; mode=block";
+
+
+
+
+# HTTP - redirect to HTTPS
+server {
+    listen 80;
+    server_name ${LETSENCRYPT_DOMAIN};
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/html;
+    }
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
 }
 
-root /usr/share/nginx/html;
-index index.html;
+# HTTPS - proxy to frontend and backend
+server {
+    listen 443 ssl;
+    server_name ${LETSENCRYPT_DOMAIN};
 
-gzip on;
-gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
-gzip_min_length 256;
+    ssl_certificate /etc/letsencrypt/live/tool.dibolky.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/tool.dibolky.com/privkey.pem;
 
-location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|eot|ttf|svg)$ {
-    expires 30d;
-    access_log off;
-    add_header Cache-Control "public";
+    location /api/ {
+        proxy_pass http://backend:5050;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+
+    location / {
+        proxy_pass http://frontend:5173;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
 }
-
-location / {
-    try_files $uri $uri/ /index.html;
-}
-
-add_header X-Content-Type-Options nosniff;
-add_header X-Frame-Options DENY;
-add_header X-XSS-Protection "1; mode=block";
