--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -159,6 +159,42 @@ services:
       retries: 3
       start_period: 60s
 
+  nginx:
+    image: nginx:alpine
+    container_name: nginx
+    depends_on:
+      - frontend
+      - backend
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx/conf.d:/etc/nginx/conf.d
+      - ./nginx/ssl:/etc/letsencrypt
+      - ./nginx/www:/var/www/html
+    networks:
+      - dibolky-tool
+
+  certbot:
+    image: certbot/certbot
+    container_name: certbot
+    env_file: .env
+    depends_on:
+      - nginx
+    environment:
+      - LETSENCRYPT_EMAIL=${LETSENCRYPT_EMAIL}
+      - LETSENCRYPT_DOMAIN=${LETSENCRYPT_DOMAIN}
+    volumes:
+      - ./nginx/ssl:/etc/letsencrypt
+      - ./nginx/www:/var/www/html
+    entrypoint: >
+      sh -c "certbot certonly --webroot --webroot-path=/var/www/html
+      --email $${LETSENCRYPT_EMAIL} --agree-tos --no-eff-email
+      -d $${LETSENCRYPT_DOMAIN}"
+    networks:
+      - dibolky-tool
+
+
 networks:
   dibolky-tool:
     driver: bridge
