--- a/frontend/Dockerfile.dev
+++ b/frontend/Dockerfile.dev
@@ -1,10 +1,20 @@
-FROM node:22-alpine
+# FROM node:22-alpine
+# WORKDIR /app
+# COPY package*.json ./
+# RUN npm install
+# COPY . .
+# RUN adduser -D nodeuser && chown -R nodeuser:nodeuser /app
+# USER nodeuser
+# ENV NODE_ENV=development
+# EXPOSE 5173
+# CMD ["npm", "run", "dev"]
+
+
+# Build stage
+FROM node:22-alpine AS builder
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
-RUN adduser -D nodeuser && chown -R nodeuser:nodeuser /app
-USER nodeuser
-ENV NODE_ENV=development
-EXPOSE 5173
-CMD ["npm", "run", "dev"]
+RUN npm run build
+
