--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,10 +1,10 @@
 FROM node:22-alpine as builder
 WORKDIR /app
-COPY ../frontend . 
+COPY ./frontend . 
 RUN npm install && npm run build
 
 FROM nginx:alpine
 COPY --from=builder /app/dist /usr/share/nginx/html
-COPY ./nginx/config/nginx.conf /etc/nginx/conf.d/default.conf
+COPY ./nginx/conf.d/nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
