--- a/nginx/conf.d/nginx.conf
+++ b/nginx/conf.d/nginx.conf
@@ -19,22 +19,22 @@ server {
     }
 }
 
-# server {
-#     listen 443 ssl;
-#     server_name ${LETSENCRYPT_DOMAIN};
+server {
+    listen 443 ssl;
+    server_name ${LETSENCRYPT_DOMAIN};
 
-#     ssl_certificate /etc/letsencrypt/live/tool.dibolky.com/fullchain.pem;
-#     ssl_certificate_key /etc/letsencrypt/live/tool.dibolky.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/tool.dibolky.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/tool.dibolky.com/privkey.pem;
 
-#     location /api/ {
-#         proxy_pass http://backend:5050;
-#         proxy_set_header Host $host;
-#         proxy_set_header X-Real-IP $remote_addr;
-#     }
+    location /api/ {
+        proxy_pass http://backend:5050;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
 
-#     location / {
-#         root /usr/share/nginx/html;
-#         index index.html;
-#         try_files $uri $uri/ /index.html;
-#     }
-# }
+    location / {
+        root /usr/share/nginx/html;
+        index index.html;
+        try_files $uri $uri/ /index.html;
+    }
+}
