--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
     "test": "jest",
     "start": "nodemon --exec ts-node -r tsconfig-paths/register ./src/server.ts",
     "dev": "nodemon ./src/server.ts",
-    "build":"tsc --noEmitOnError false"
+    "build": "tsc --noEmitOnError false"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +14,7 @@
   "description": "",
   "devDependencies": {
     "@types/aws-sdk": "^0.0.42",
+    "@types/cookie": "^0.6.0",
     "@types/jest": "^29.5.14",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.10.10",
