--- a/frontend/Dockerfile.dev
+++ b/frontend/Dockerfile.dev
@@ -1,20 +1,10 @@
-# FROM node:22-alpine
-# WORKDIR /app
-# COPY package*.json ./
-# RUN npm install
-# COPY . .
-# RUN adduser -D nodeuser && chown -R nodeuser:nodeuser /app
-# USER nodeuser
-# ENV NODE_ENV=development
-# EXPOSE 5173
-# CMD ["npm", "run", "dev"]
-
-
-# Build stage
-FROM node:22-alpine AS builder
+FROM node:22-alpine
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
-RUN npm run build
-
+RUN adduser -D nodeuser && chown -R nodeuser:nodeuser /app
+USER nodeuser
+ENV NODE_ENV=development
+EXPOSE 5173
+CMD ["npm", "run", "dev"]
