--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "@tanstack/react-query": "^5.66.5",
     "@tanstack/react-query-devtools": "^5.66.5",
     "@types/js-cookie": "^3.0.6",
+    "@zegocloud/zego-uikit-prebuilt": "^2.15.1",
     "antd": "^5.23.0",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
@@ -68,7 +69,8 @@
     "spinners-react": "^1.0.10",
     "tailwind-merge": "^2.6.0",
     "tailwind-scrollbar-hide": "^2.0.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zego-express-engine-webrtc": "^3.10.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
