fix(socket-connection): forwared socket url to backend in nginx

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -26,7 +26,6 @@ jobs:
           cd /opt/Dibolky
           sudo git pull origin main
           sudo docker container stop 
-          docker rm $(docker ps -aq)
-          docker rmi -f $(docker images -q)
+          docker system prune -f -a --volumes
           sudo docker compose up --build -d 
         EOF
