fix types issue

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -14,8 +14,8 @@
       "@/*": ["./*"]
     },
     "typeRoots": [
-      "./node_modules/@types",
-      "./src/types/@declarations"
+     "./node_modules/@types", 
+     "./src/types"
     ],
   },
   "include": ["src/**/*", "src/tests"],           
