--- a/backend/package.json
+++ b/backend/package.json
@@ -73,6 +73,7 @@
     "razorpay": "^2.9.5",
     "redis": "^4.7.0",
     "reflect-metadata": "^0.2.2",
+    "simple-crypto-js": "^3.0.1",
     "simple-oauth2": "^5.1.0",
     "socket.io": "^4.8.1",
     "stripe": "^17.6.0",
