--- a/elk/kibana/kibana.yml
+++ b/elk/kibana/kibana.yml
@@ -1,3 +1,6 @@
 server.name: kibana
 server.host: "0.0.0.0"
 elasticsearch.hosts: ["http://elasticsearch:9200"]
+elasticsearch.ssl.verificationMode: "none"
+
+xpack.security.enabled: false
