fix: nginx issue

--- a/nginx/conf.d/nginx.conf
+++ b/nginx/conf.d/nginx.conf
@@ -3,7 +3,7 @@ server {
     server_name ${LETSENCRYPT_DOMAIN};
 
     location /.well-known/acme-challenge/ {
-        root /var/www/html;
+        alias /var/www/html/.well-known/acme-challenge/;
     }
 
     location /api/ {
