--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,10 +1,12 @@
 FROM node:22-alpine AS builder
+LABEL project=Dibolky
 WORKDIR /app
 COPY package*.json ./
 RUN npm ci
 COPY . .
 
 FROM node:22-alpine
+LABEL project=Dibolky
 WORKDIR /app
 RUN adduser -D nodeuser
 COPY --from=builder /app /app
