fix: typo path name to frontend

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -31,8 +31,8 @@ jobs:
             cd /opt/projects/Dibolky
             git pull origin main
 
-            echo "Installing dependencies and building client..."
-            cd client
+            echo "Installing dependencies and building frontend..."
+            cd frontend
             npm install
             npm run build
 
